--- a/scss/base/_global.scss
+++ b/scss/base/_global.scss
@@ -1,64 +1,206 @@
 // Header styles
 
-.navbar {
-    margin-left: 20%;
-    @include flex-container;
-    .logo-container {
-        background-image: url(../../img/logo-txt.png);
-        background-repeat: no-repeat;
-        background-size: contain;
-        background-position: center;
-        padding-top: 10px;
-        width: 8vw;
-        height: 8vw;
-        display: inline-block; 
-    }
-    .nav-menu {
+.main-header-container {
+    position: relative;
+    height: 85vh;
+    .header-left-container {
         display: inline-block;
-        list-style-type: none;
-        cursor: pointer; 
+        width: 12%;
+        min-width: 50px;
+        height: 65vh;
         position: relative;
-        ul {
+        min-width: 50px;
+        img {
+            width: 100%;
+            position: absolute;
+            left: -10px;
+            top: 47%;
+        }
+    }
+    .menu-container {
+        display: inline-block;
+        position: absolute;
+        margin-left: 6vw;
+        margin-top: 1vw;
+        width: 56%;
+        .logo-container {
+            background-image: url(../../img/logo-txt.png);
+            background-repeat: no-repeat;
+            background-size: contain;
+            background-position: center;
+            padding-top: 10px;
+            width: 10%;
+            height: 8vw;
+            display: inline-block; 
+            min-width: 50px;
+        }
+        .nav-menu {
+            display: inline-block;
             list-style-type: none;
-            @include flex-container;
+            cursor: pointer; 
+            position: absolute;
+            color: $dark-grey;
+            ul {
+                list-style-type: none;
+                @include flex-container;
+                height: 7vw;
+                justify-content: space-between;
+                flex-wrap: nowrap;
+                font-family: $font-primary;
+                li {
+                    margin: 1vw;
+                    .nav-item {
+                        text-decoration: none;
+                        text-transform: uppercase;
+                        font-size: 15px;
+                        list-style-type: none;
+                        line-height: 7vw;
+                        color: $dark-grey;
+                        }
+                    }
                 }
+        } 
+        .main-header {
+        width: 56%;
+        display: block;
+        word-wrap: break-word;
+        padding: 15vh 0;
+        margin-left: 6vw;
+            h5, h2 {
+                font-family: $font-secondary;
+            }
+            h5 {
+                text-transform: uppercase;
+            }
+            h2 {
+                font-size: 50px;
+            }
+
+            p {
+                font-family: $font-primary;
+                font-size: 15px;
+            }
+
+            .header-ending {
+                display: flex;
+                padding: 20px 0;
+                .btn {
+                    background-color: #1ba4ce;
+                    width: 200px;
+                    height: 40px;
+                    padding: 5px 2px;
+                    color: white;
+                    text-decoration: none;
+                    text-align: center;
+                    line-height: 40px;
+                    font-size: 15px;
+                    margin-right: 15px;
+                    }
+                .story-text {
+                    font-family: $font-primary;
+                    margin-left: 5px;
+                    font-weight: 200;
+                    color: $dark-grey;
+                }
+            }
+            }
+        }  
     }
-    .nav-item {
+    .soap-img-container {
+        width: 56%;
+        height: 55vh;
+        display: inline-block;
+        position: absolute;
+        left: 60%;
+        img {
+            width: 90%;
+        }
+    }
 
-        text-decoration: none;
-        text-transform: uppercase;
-        font-size: 15px;
-        display: inline; 
-        list-style-type: none;
+    .about {
+        width: 50%;
+        margin: auto;
+        text-align: center;
+        img {
+            width: 10%;
+        }
+        h5, h2 {
+            font-family: $font-secondary;
+        }
+        h5 {
+            text-transform: uppercase;
+        }
+        h2 {
+            font-size: 42px;
+        }
+
+        .btn-oval {
+            display: inline-block;
+            background-color: #1ba4ce;
+            width: 160px;
+            height: 40px;
+            padding: 5px 2px;
+            color: white;
+            text-decoration: none;
+            text-align: center;
+            line-height: 40px;
+            font-size: 15px;
+            margin: 30px;
+            border-radius: 20%/50%;
+            }
+        }
+
+.about-img-container {
+    display: flex;
+    height: 30vh;
+    .about-img-item {
+        cursor: pointer;
+        position: relative;
+        flex-basis: 25%;
+        .shown {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        }
+        .hidden-img-container {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            top: 0;
+            left: 0;
+            background-color: rgba(0, 123, 255, 0.75);
+            margin: 0;
+            text-align: center;
+            line-height: 200px;
+            color: #fff;
+            font-weight: 300;
+            font-size: 3em;
+            opacity: 0;
+            transition: all .3s;
+            .hidden-img {
+                position: absolute;
+                width: 20%;
+                top: 25%;
+                left: 42%;
+            }
+            .hidden-header {
+                position: absolute;
+                margin-left: auto;
+                margin-right: auto;
+                margin-top: 5%;
+                top: 15.5%;
+                left: 15%;
+                font-size: 2.5vw;
+                font-family: $font-secondary;
+                font-weight: bold;
+                text-align: center;
+            }
+        }
+        .hidden-img-container:hover {
+            opacity: 1;
+        }
     }
 }
 
 
 
-.menu-nav {
-    display: inline-block;
-}
-
-.soap-img {
-    background-image: url(../../img/header-bg.png);
-    background-repeat: no-repeat;
-    background-size: contain;
-    width: 100%;
-}
-
-
-.header {
-    width: 95%;
-    @include flex-container;    
-}
-
-.header-flowers {
-    flex-basis: 12.5%;
-    background-image: url(../../img/header-flowers.png);
-    background-repeat: no-repeat;
-    background-size: contain;
-}
-
-.main-header {
-    flex-basis: 35.5%;
-}
